--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "qbm",
-    "appid" : "",
+    "appid" : "__UNI__ED81C5D",
     "description" : "多平台快速开发的UI框架",
     "versionName" : "1.0.0",
     "versionCode" : 1,
@@ -96,7 +96,7 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx626c263ca7be3747",
         "setting" : {
             "urlCheck" : false,
             "es6" : false,
