--- a/manifest.json
+++ b/manifest.json
@@ -106,7 +106,13 @@
         "optimization" : {
             "subPackages" : true
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+		"plugins": {
+			"live-player-plugin": {
+				"version": "1.3.5", 
+				"provider": "wx2b03c6e691cd7370" 
+			}
+		}
     },
     "mp-alipay" : {
         "usingComponents" : true,
