--- a/manifest.json
+++ b/manifest.json
@@ -106,7 +106,9 @@
         "optimization" : {
             "subPackages" : true
         },
-        "usingComponents" : true,
+        "usingComponents" : {
+			"subscribe": "plugin-private://wx2b03c6e691cd7370/components/subscribe/subscribe"
+		},
 		"plugins": {
 			"live-player-plugin": {
 				"version": "1.3.5", 
